@@ -18,6 +18,7 @@
  */
 #include "pqxx/libcompiler.h"
 
+#include <limits>
 #include <string>
 
 #include "pqxx/result"
@@ -34,74 +35,141 @@ class PQXX_LIBEXPORT cursor_base
 public:
   typedef result::size_type size_type;
 
+  operator void *() const { return m_done ? 0 : &s_dummy; }
+  bool operator!() const { return m_done; }
+
   static size_type ALL() throw ();
   static size_type NEXT() throw () { return off_next; }
   static size_type PRIOR() throw () { return off_prior; }
   static size_type BACKWARD_ALL() throw ();
 
-protected:
-  cursor_base() : m_context(0) {}
-  cursor_base(transaction_base *context) : m_context(context) {}
+  const PGSTD::string &name() const throw () { return m_name; }
 
-  int get_unique_cursor_num();
+protected:
+  cursor_base(transaction_base *context, const PGSTD::string &cname) :
+  	m_context(context), m_done(false), m_name(cname)
+  {
+    m_name += "_";
+    m_name += to_string(get_unique_cursor_num());
+  }
 
   transaction_base *m_context;
+  bool m_done;
+
+private:
+  int get_unique_cursor_num();
+
+  PGSTD::string m_name;
+
+  /// Purely to give us a non-null pointer to return
+  static unsigned char s_dummy;
+
+  /// Not allowed
+  cursor_base();
+  /// Not allowed
+  cursor_base(const cursor_base &);
+  /// Not allowed
+  cursor_base &operator=(const cursor_base &);
 };
 
 
-cursor_base::size_type cursor_base::ALL() throw ()
+inline cursor_base::size_type cursor_base::ALL() throw ()
 {
 #ifdef _WIN32
   // Microsoft's compiler defines max() and min() macros!  Others may as well
   return INT_MAX;
 #else
-  return numeric_limits<size_type>::max();
+  return PGSTD::numeric_limits<size_type>::max();
 #endif
 }
 
-cursor_base::size_type cursor_base::BACKWARD_ALL() throw ()
+inline cursor_base::size_type cursor_base::BACKWARD_ALL() throw ()
 {
 #ifdef _WIN32
   return INT_MIN + 1;
 #else
-  return numeric_limits<size_type>::min() + 1;
+  return PGSTD::numeric_limits<size_type>::min() + 1;
 #endif
 }
 
-
-/// Simple "forward-only input iterator" wrapper for SQL cursor
-class PQXX_LIBEXPORT const_forward_cursor : public cursor_base
+/// Simple read-only cursor represented as a stream of results
+/** Data is fetched from the cursor as a sequence of result objects.  Each of
+ * these will contain the number of rows defined as the stream's stride, except
+ * of course the last block of data which may contain fewer rows.
+ */
+class PQXX_LIBEXPORT icursorstream : public cursor_base
 {
 public:
-  const_forward_cursor();						//[]
-
-  const_forward_cursor(const const_forward_cursor &);			//[]
-
-  const_forward_cursor(transaction_base &, 				//[]
+  icursorstream(transaction_base &context,
       const PGSTD::string &query,
+      const PGSTD::string &basename,
       size_type stride=1);
 
-  const_forward_cursor(transaction_base &, 				//[]
-      const PGSTD::string &query,
-      const PGSTD::string &cname,
-      size_type stride=1);
+  icursorstream &get(result &res) { res = fetch(); return *this; }
+  icursorstream &operator>>(result &res) { return get(res); }
+  icursorstream &ignore(PGSTD::streamsize n=1);
 
-  const_forward_cursor &operator++();					//[]
-  const_forward_cursor operator++(int);					//[]
-
-  result operator*() const { return m_lastdata; }			//[]
-  const result &operator->() const throw () { return m_lastdata; }	//[]
-
-  bool operator==(const const_forward_cursor &) const;			//[]
-  const_forward_cursor &operator=(const const_forward_cursor &);	//[]
+  void set_stride(size_type);
 
 private:
-  void declare(const PGSTD::string &);
-  void fetch();
+  void declare(const PGSTD::string &query);
+  result fetch();
 
-  PGSTD::string m_name;
   size_type m_stride;
-  result m_lastdata;
+};
+
+
+/// Approximate istream_iterator for icursorstream
+class PQXX_LIBEXPORT icursor_iterator : 
+  public PGSTD::iterator<PGSTD::input_iterator_tag, 
+  	result,
+	cursor_base::size_type,
+	const result *,
+	const result &>
+{
+public:
+  typedef icursorstream istream_type;
+
+  icursor_iterator() : m_stream(0), m_here(), m_fresh(true) {}
+  icursor_iterator(istream_type &s) :
+    m_stream(&s), m_here(), m_fresh(false) {}
+  icursor_iterator(const icursor_iterator &rhs) : 
+    m_stream(rhs.m_stream), m_here(rhs.m_here), m_fresh(rhs.m_fresh) {}
+
+  const result &operator*() const { refresh(); return m_here; }
+  const result *operator->() const { refresh(); return &m_here; }
+
+  icursor_iterator &operator++()
+  	{ read(); return *this; }
+
+  icursor_iterator operator++(int)
+  	{ icursor_iterator old(*this); read(); return old; }
+
+  // TODO: operator +=
+
+  icursor_iterator &operator=(const icursor_iterator &rhs)
+  {
+    m_here = rhs.m_here;	// (Already protected against self-assignment)
+    m_stream = rhs.m_stream;	// (Does not throw, so we're exception-safe)
+    m_fresh = rhs.m_fresh;
+    return *this;
+  }
+
+  bool operator==(const icursor_iterator &rhs) const throw ()
+  	{ return m_here.empty() && rhs.m_here.empty(); }
+  bool operator!=(const icursor_iterator &rhs) const throw ()
+  	{ return !operator==(rhs); }
+
+private:
+  void read() const
+  {
+    m_stream->get(m_here);
+    m_fresh = true;
+  }
+  void refresh() const { if (!m_fresh) read(); }
+  icursorstream *m_stream;
+  mutable result m_here;
+  mutable bool m_fresh;
 };
 
 
