@@ -20,7 +20,6 @@
 #include <cstdlib>
 
 #include "pqxx/cursor"
-
 #include "pqxx/result"
 #include "pqxx/transaction"
 
@@ -35,106 +34,47 @@ int pqxx::cursor_base::get_unique_cursor_num()
 }
 
 
-pqxx::const_forward_cursor::const_forward_cursor() :
-  cursor_base(),
-  m_name(),
-  m_stride(0),
-  m_lastdata()
-{
-}
+unsigned char pqxx::cursor_base::s_dummy;
 
 
-pqxx::const_forward_cursor::const_forward_cursor(const const_forward_cursor &x):
-  cursor_base(x.m_context),
-  m_name(x.m_name),
-  m_stride(x.m_stride),
-  m_lastdata(x.m_lastdata)
-{
-}
-
-
-pqxx::const_forward_cursor::const_forward_cursor(transaction_base &context,
+pqxx::icursorstream::icursorstream(pqxx::transaction_base &context,
     const string &query,
+    const string &basename,
     size_type stride) :
-  cursor_base(&context),
-  m_name(),
-  m_stride(stride),
-  m_lastdata()
+  cursor_base(&context, basename),
+  m_stride(stride)
 {
-  m_name = m_context->name() + "_cfc";
+  set_stride(stride);
   declare(query);
-  fetch();
+}
+
+void pqxx::icursorstream::set_stride(size_type n)
+{
+  if (n < 1)
+    throw invalid_argument("Attempt to set cursor stride to " + to_string(n));
+  m_stride = n;
+}
+
+void pqxx::icursorstream::declare(const string &query)
+{
+  m_context->exec("DECLARE \"" + name() + "\" "
+      		"NO SCROLL CURSOR FOR " + query + " FOR READ ONLY",
+	"[DECLARE "+name()+"]");
 }
 
 
-pqxx::const_forward_cursor::const_forward_cursor(transaction_base &context,
-    const string &query,
-    const string &cname,
-    size_type stride) :
-  cursor_base(&context),
-  m_name(cname),
-  m_stride(stride),
-  m_lastdata()
+pqxx::result pqxx::icursorstream::fetch()
 {
-  declare(query);
-  fetch();
+  result r(m_context->exec("FETCH "+to_string(m_stride)+" IN \""+name()+"\""));
+  if (r.empty()) m_done = true;
+  return r;
 }
 
 
-pqxx::const_forward_cursor &pqxx::const_forward_cursor::operator++()
+pqxx::icursorstream &pqxx::icursorstream::ignore(streamsize n)
 {
-  fetch();
+  m_context->exec("MOVE " + to_string(n) + " IN \"" + name() + "\"");
   return *this;
-}
-
-
-pqxx::const_forward_cursor pqxx::const_forward_cursor::operator++(int)
-{
-  fetch();
-  return *this;
-}
-
-
-bool pqxx::const_forward_cursor::operator==(const const_forward_cursor &x) const
-{
-  // Result is only interesting for "at-end" comparisons
-  return m_lastdata.empty() && x.m_lastdata.empty();
-}
-
-
-pqxx::const_forward_cursor &
-pqxx::const_forward_cursor::operator=(const const_forward_cursor &x)
-{
-  if (&x != this)
-  {
-    // Copy to temporaries to improve exception robustness
-    result lastdata_tmp(x.m_lastdata);
-    string name_tmp(x.m_name);
-
-    // Object's state change should be exception-free
-    m_lastdata.swap(lastdata_tmp);
-    m_name.swap(name_tmp);
-    m_stride = x.m_stride;
-    m_context = x.m_context;
-  }
-  return *this;
-}
-
-
-void pqxx::const_forward_cursor::declare(const string &query)
-{
-  m_name += "_";
-  m_name += to_string(get_unique_cursor_num());
-
-  m_context->exec("DECLARE \""+m_name+"\" NO SCROLL FOR READ ONLY FOR "+query,
-	"[DECLARE "+m_name+"]");
-}
-
-
-void pqxx::const_forward_cursor::fetch()
-{
-  m_lastdata =
-  	m_context->exec("FETCH "+to_string(m_stride)+" IN \""+m_name+"\"");
 }
 
 
